--- a/My Portfolio/index.html
+++ b/My Portfolio/index.html
@@ -50,14 +50,14 @@
         </div>
         <div class="tab-contents active-tab" id="skills">
             <ul>
-                <li><span>UI/UX</span><br>Desigining Web Interface</i>
+                <li><span>lorem ipsum volor sit.</span><br>Desigining Web Interface</i>
                 <li><span>Web development</span><br>Web app development</i>
                 <li><span>Coding</span><br>Programming</i>
                 </ul>
         </div>
         <div class="tab-contents" id="experience">
             <ul>
-                <li><span>UI/UX</span><br>Desigining Web Interface</i>
+                <li><span>lorem ipsum volor sit.</span><br>Desigining Web Interface</i>
                 <li><span>Web development</span><br>Web app development</i>
                 <li><span>Coding</span><br>Programming</i>
                 </ul>
@@ -81,19 +81,19 @@
         <div class="services-list">
             <div>
                 <i class="fa-solid fa-code"></i>
-                <h2>Web Design</h2>
+                <h2>lorem ipsum volor sit.</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. At reiciendis, corrupti excepturi laboriosam nostrum architecto.</p>
             <a href="#">Learn more</a>
             </div>
             <div>
                 <i class="fa-solid fa-crop-simple"></i>
-                <h2>UI/UX Design</h2>
+                <h2>lorem ipsum volor sit. </h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. At reiciendis, corrupti excepturi laboriosam nostrum architecto.</p>
             <a href="#">Learn more</a>
             </div>
             <div>
                 <i class="fa-brands fa-app-store"></i>
-                <h2>App Design</h2>
+                <h2>lorem ipsum volor sit.</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. At reiciendis, corrupti excepturi laboriosam nostrum architecto.</p>
             <a href="#">Learn more</a>
             </div>
@@ -108,25 +108,25 @@
             <h1 class="sub-title">My Work</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="images/work-1.png" >
+                    <img src= >
                     <div class="layer">
-                        <h3>Social Media App</h3>
+                        <h3>Portfolio website</h3>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate, aut.</p>
                         <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/work-2.png" >
+                    <img src="" >
                     <div class="layer">
-                        <h3>Music App</h3>
+                        <h3>covid19 live stats tracker</h3>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate, aut.</p>
                         <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/work-3.png" >
+                    <img src="" >
                     <div class="layer">
-                        <h3>Online Shopping App</h3>
+                        <h3>movie site</h3>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate, aut.</p>
                         <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
@@ -167,7 +167,7 @@
         </div>
     </div>
     <div class="copyright">
-        <p>copyright © Raghunandan<i class="fa-solid fa-heart"></i></p>
+        <p>Raghunandan<i class="fa-solid fa-heart"></i></p>
     </div>
 </div>
 
