--- a/My Portfolio/index.html
+++ b/My Portfolio/index.html
@@ -108,7 +108,7 @@
             <h1 class="sub-title">My Work</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src= >
+                    <img src="images/About_covid.jpg" >
                     <div class="layer">
                         <h3>Portfolio website</h3>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate, aut.</p>
